--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <section id="title-section">
       <h1 class="title-logo">AG<br>RA</h1>
       <div class="spacer">
+        <img src="/images/guy.gif" alt="guy">
       </div>
     </section>
 
