Disable Scroll Bounce

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Hello World</title>
   </head>
   <body>
-
+  <div id="main-container">
 
     <section id="header">
           <!-- <h3>AG<br>RA</h3> -->
@@ -29,6 +29,10 @@
       </div>
     </section>
 
+    <section class="gradient-top">
+
+    </section>
+
     <section id="content1-section">
       <div class="c1d1">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id ullamcorper ipsum. Proin imperdiet dui eget lorem vehicula pellentesque. Integer tempus, augue varius egestas bibendum, mi odio pharetra augue, sit amet dapibus sapien velit et nisi. Donec malesuada ipsum dui. Ut vitae risus ac diam rutrum ultrices nec quis tortor. Pellentesque quis mollis mauris, nec hendrerit erat. Mauris condimentum risus quam, et pellentesque ante rutrum sit amet. Donec et est dictum, malesuada justo vel, convallis felis. Vivamus hendrerit eget nisi sed venenatis. Curabitur at velit quam.</p>
@@ -36,5 +40,6 @@
 
     </section>
 
+  </div>
   </body>
 </html>
