Add Styles for Header Section

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/css/style.css">
+    <!-- Google CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Allerta+Stencil&family=Bungee+Hairline&family=Fredericka+the+Great&family=Geo:ital@0;1&family=JetBrains+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Libre+Barcode+39+Text&family=Major+Mono+Display&family=Megrim&family=Michroma&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Raleway+Dots&family=Russo+One&family=Zen+Kurenaido&display=swap" rel="stylesheet">
     <!-- Mobile Port -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
     <title>Hello World</title>
   </head>
+
+
   <body>
   <div id="main-container">
 
@@ -18,16 +24,27 @@
       </div>
       <div class="menu">
         <a href="/about">ABOUT</a>
+        <a href="/contact">MERCH</a>
         <a href="/contact">CONTACT</a>
+        <a href="/contact">FAQ</a>
+
       </div>
     </section>
 
     <section id="title-section">
-      <h1 class="title-logo">AG<br>RA</h1>
+      <div class="">
+        <h1 class="title-logo">AG<br>RA</h1>
+        <p class="title-sub">World's First Hyper-ML Architecture is Here.</p>
+      </div>
       <div class="spacer">
         <img src="/images/guy.gif" alt="guy">
       </div>
     </section>
+
+    <a href="#content1-section">
+      <img class="down-arrow" src="/images/arrow-down.png" alt="down arrow">
+    </a>
+
 
     <section class="gradient-top">
 
@@ -39,6 +56,13 @@
       </div>
 
     </section>
+
+    <section class="gradient-bottom">
+
+    </section>
+
+    <div>Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
 
   </div>
   </body>
