--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
-    <!-- Google CDN -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Aldrich&family=Allerta+Stencil&family=Bungee+Hairline&family=Fredericka+the+Great&family=Geo:ital@0;1&family=JetBrains+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Libre+Barcode+39+Text&family=Major+Mono+Display&family=Megrim&family=Michroma&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Raleway+Dots&family=Russo+One&family=Zen+Kurenaido&display=swap" rel="stylesheet">
-    <!-- Mobile Port -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
-    <title>Hello World</title>
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/style.css">
+  <!-- Google CDN -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Aldrich&family=Allerta+Stencil&family=Bungee+Hairline&family=Fredericka+the+Great&family=Geo:ital@0;1&family=JetBrains+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Libre+Barcode+39+Text&family=Major+Mono+Display&family=Megrim&family=Michroma&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Raleway+Dots&family=Russo+One&family=Zen+Kurenaido&display=swap"
+    rel="stylesheet">
+  <!-- Mobile Port -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
+  <title>Hello World</title>
+</head>
 
 
-  <body>
+<body>
   <div id="main-container">
 
     <section id="header">
-          <!-- <h3>AG<br>RA</h3> -->
+      <!-- <h3>AG<br>RA</h3> -->
       <div class="logo">
-        <a href="/"><p>AG<br>RA</p></a>
+        <a href="/">
+          <p>AG<br>RA</p>
+        </a>
 
       </div>
       <div class="menu">
@@ -41,10 +46,9 @@
       </div>
     </section>
 
-    <a href="#content1-section">
-      <img class="down-arrow" src="/images/arrow-down.png" alt="down arrow">
-    </a>
-
+      <a href="#content1-section">
+        <img class="down-arrow" src="/images/arrow-down.png" alt="down arrow">
+      </a>
 
     <section class="gradient-top">
 
@@ -52,9 +56,23 @@
 
     <section id="content1-section">
       <div class="c1d1">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id ullamcorper ipsum. Proin imperdiet dui eget lorem vehicula pellentesque. Integer tempus, augue varius egestas bibendum, mi odio pharetra augue, sit amet dapibus sapien velit et nisi. Donec malesuada ipsum dui. Ut vitae risus ac diam rutrum ultrices nec quis tortor. Pellentesque quis mollis mauris, nec hendrerit erat. Mauris condimentum risus quam, et pellentesque ante rutrum sit amet. Donec et est dictum, malesuada justo vel, convallis felis. Vivamus hendrerit eget nisi sed venenatis. Curabitur at velit quam.</p>
-      </div>
+        <p>AGRA™ is the 4th Generation Nano-based Sampling Architecture that Halves Build Time, and Quadruples Confident Yields Based on 2.5 Trillion ML Datasets.
+          We have revolutionized nano-based sampling by dramatically accelerating interation process, 20 years ahead of the competition.</p>
+          <!-- Trigger/Open The Modal -->
+          <button id="expBtn">READ MORE</button>
 
+          <!-- The Modal -->
+          <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <img src="/images/guy.gif" alt="guy">
+            </div>
+
+          </div>
+      </div>
     </section>
 
     <section class="gradient-bottom">
@@ -65,5 +83,37 @@
 
 
   </div>
-  </body>
+
+  <script type="text/javascript">
+    // Get the modal
+    var modal = document.getElementById("myModal");
+
+    // Get the button that opens the modal
+    var btn = document.getElementById("expBtn");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks on the button, open the modal
+    btn.onclick = function() {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  </script>
+
+
+
+</body>
+
 </html>
