Add Chart.js & Flex CSS

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     rel="stylesheet">
   <!-- Mobile Port -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
-  <title>Hello World</title>
+  <title>AGRA</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
 </head>
 
 
@@ -46,38 +48,57 @@
       </div>
     </section>
 
-      <a href="#content1-section">
-        <img class="down-arrow" src="/images/arrow-down.png" alt="down arrow">
-      </a>
+    <a href="#content1-section">
+      <img class="down-arrow" src="/images/arrow-down.png" alt="down arrow">
+    </a>
 
-    <section class="gradient-top">
-
-    </section>
+    <section class="gradient-top"></section>
 
     <section id="content1-section">
       <div class="c1d1">
         <p>AGRA™ is the 4th Generation Nano-based Sampling Architecture that Halves Build Time, and Quadruples Confident Yields Based on 2.5 Trillion ML Datasets.
           We have revolutionized nano-based sampling by dramatically accelerating interation process, 20 years ahead of the competition.</p>
-          <!-- Trigger/Open The Modal -->
-          <button id="expBtn">READ MORE</button>
+        <!-- Trigger/Open The Modal -->
+        <button id="expBtn">READ MORE</button>
 
-          <!-- The Modal -->
-          <div id="myModal" class="modal">
+        <!-- The Modal -->
+        <div id="myModal" class="modal">
 
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <img src="/images/guy.gif" alt="guy">
-            </div>
-
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit
+              amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <img src="/images/guy.gif" alt="guy">
           </div>
+
+        </div>
       </div>
     </section>
 
-    <section class="gradient-bottom">
+    <section class="gradient-bottom"></section>
+
+    <section class="gradient-top"></section>
+
+    <section id="content2-section">
+
+      <div class="flexbox">
+
+        <div class="c2d1">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        </div>
+        <canvas id="myChart" style="width:100%;max-width:500px"></canvas>
+
+      </div>
 
     </section>
+
+    <section class="gradient-bottom"></section>
+
 
     <div>Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
@@ -110,9 +131,36 @@
         modal.style.display = "none";
       }
     }
+
+
+    //Chart
+    var xValues = [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000];
+
+    new Chart("myChart", {
+      type: "line",
+      data: {
+        labels: xValues,
+        datasets: [{
+          data: [860, 1140, 1060, 1060, 1070, 1110, 1330, 2210, 7830, 2478],
+          borderColor: "red",
+          fill: false
+        }, {
+          data: [1600, 1700, 1700, 1900, 2000, 2700, 4000, 5000, 6000, 7000],
+          borderColor: "green",
+          fill: false
+        }, {
+          data: [300, 700, 2000, 5000, 6000, 4000, 2000, 1000, 200, 100],
+          borderColor: "blue",
+          fill: false
+        }]
+      },
+      options: {
+        legend: {
+          display: false
+        }
+      }
+    });
   </script>
-
-
 
 </body>
 
