--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
   <!-- Mobile Port -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
   <title>AGRA</title>
+  <!-- jQuery CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <!-- Chart JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
 </head>
@@ -159,6 +162,11 @@
           display: false
         }
       }
+    });
+
+    // jQUERY?
+    $(document).keydown(function(event) {
+      $("h1").text(event.key);
     });
   </script>
 
