Add Testimonial Content

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     <section id="arrow-destination" class="gradient-top"></section>
 
     <section id="content1-section">
-      <div   class="c1d1">
+      <div data-aos="fade-up" class="c1d1">
         <p>AGRA™ is the 4th Generation Nano-based Sampling Architecture that Halves Build Time, and Quadruples Confident Yields Based on 2.5 Trillion ML Datasets.
           We have revolutionized nano-based sampling by dramatically accelerating interation process, 20 years ahead of the competition.</p>
         <!-- Trigger/Open The Modal -->
@@ -122,6 +122,52 @@
           <img class="card-img" src="/images/thumb-guy.jpg" alt="guy">
         </div>
 
+      </div>
+
+      <div class="c1d3">
+
+        <div class="testimonial">
+          <h1>TESTIMONIAL</h1>
+          <p>AGRA is the best nanothreadding solution you can find today,
+            but don't just take our word for it.</p>
+        </div>
+
+
+        <div class="ppl-flex">
+
+          <div data-aos="flip-left" data-aos-duration="2000" class="fake-ppl">
+            <div class="cropper">
+              <img src="/images/f1.jpeg" alt="guy1">
+            </div>
+            <p class="fname">Lena Alagata</p>
+            <p class="fword">“AGRA works like magic. You just plug and play.”</p>
+          </div>
+
+          <div data-aos="flip-left" data-aos-duration="2000" class="fake-ppl">
+            <div class="cropper">
+              <img src="/images/f4.jpeg" alt="guy2">
+            </div>
+            <p class="fname">Jack Dougherty</p>
+            <p class="fword">Look no further, AGRA is the way to go.</p>
+          </div>
+
+          <div data-aos="flip-left" data-aos-duration="2000" class="fake-ppl">
+            <div class="cropper">
+              <img src="/images/f3.jpeg" alt="guy3">
+            </div>
+            <p class="fname">Alexander Nisbet</p>
+            <p class="fword">AGRA... The future of sampling architecture.</p>
+          </div>
+
+          <div data-aos="flip-left" data-aos-duration="2000" class="fake-ppl">
+            <div class="cropper">
+              <img src="/images/f2.jpeg" alt="guy4">
+            </div>
+            <p class="fname">Betty Estrada</p>
+            <p class="fword">Truly revolutionary.</p>
+          </div>
+
+        </div>
       </div>
 
 
