Style Sub-pages

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
       </div>
       <div class="menu">
         <a href="/about">ABOUT</a>
-        <a href="/contact">MERCH</a>
+        <a href="/merch">MERCH</a>
         <a href="/contact">CONTACT</a>
-        <a href="/contact">FAQ</a>
+        <a href="/faq">FAQ</a>
 
       </div>
     </section>
@@ -169,18 +169,13 @@
 
         </div>
       </div>
-
-
-
-
-
-
-
     </section>
 
     <section class="gradient-bottom"></section>
 
-    <section class="gradient-top"></section>
+    <!-- JS CHART SECTION -->
+
+    <!-- <section class="gradient-top"></section>
 
     <section id="content2-section">
 
@@ -195,10 +190,16 @@
 
     </section>
 
-    <section class="gradient-bottom"></section>
+    <section class="gradient-bottom"></section> -->
 
-
+  <div class="footer">
+    <div class="credit">
+      <p>AGRA by <a href="https://github.com/zhaungsont">Michael Chuang</a><br />©Copyright 2021</p>
+    </div>
     <div>Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+    House vector created by macrovector - <a href='https://www.freepik.com/vectors/house'>www.freepik.com</a>
+  </div>
+
 
 
   </div>
