--- a/src/merch.html
+++ b/src/merch.html
@@ -13,7 +13,7 @@
 
   <!-- Mobile Port -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
-  <title>ABOUT</title>
+  <title>MERCH</title>
 </head>
 
 <body>
@@ -29,8 +29,8 @@
       </div>
       <div class="menu">
         <a class="home" href="/">HOME</a>
-        <a class="current" href="/about">ABOUT</a>
-        <a href="/merch">MERCH</a>
+        <a href="/about">ABOUT</a>
+        <a class="current" href="/merch">MERCH</a>
         <a href="/contact">CONTACT</a>
         <a href="/faq">FAQ</a>
 
@@ -47,7 +47,7 @@
 
           <div class="constuction-content">
             <h1>Uh Oh...</h1>
-            <p>The <strong>About Page</strong> is still under construction.</p>
+            <p>The <strong>Merch Page</strong>  is still under construction.</p>
           </div>
 
           <img class="construction-img" src="/images/construction.jpg" alt="This page is under construction">
