--- a/src/faq.html
+++ b/src/faq.html
@@ -13,7 +13,7 @@
 
   <!-- Mobile Port -->
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
-  <title>ABOUT</title>
+  <title>AGRA FAQ</title>
 </head>
 
 <body>
@@ -29,15 +29,15 @@
       </div>
       <div class="menu">
         <a class="home" href="/">HOME</a>
-        <a class="current" href="/about">ABOUT</a>
+        <a href="/about">ABOUT</a>
         <a href="/merch">MERCH</a>
         <a href="/contact">CONTACT</a>
-        <a href="/faq">FAQ</a>
+        <a class="current" href="/faq">FAQ</a>
 
       </div>
     </section>
 
-    <div id="about-page">
+    <div id="faq-page">
       <!-- <div class="contact-card">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div> -->
@@ -47,7 +47,7 @@
 
           <div class="constuction-content">
             <h1>Uh Oh...</h1>
-            <p>The <strong>About Page</strong> is still under construction.</p>
+            <p>The <strong>FAQ Page</strong>  is still under construction.</p>
           </div>
 
           <img class="construction-img" src="/images/construction.jpg" alt="This page is under construction">
