Temporarily Remove "Read More" Button, Improve Styling

--- a/src/404.html
+++ b/src/404.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Page Not Found!</title>
-  </head>
-  <body>
-    <h1>LOL!</h1>
-    <h3>There's nothing here. Just you and me...</h3>
-    <h5>...kinda awkward...</h5>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="/css/style.css">
+  <!-- Google CDN -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Aldrich&family=Allerta+Stencil&family=Bungee+Hairline&family=Fredericka+the+Great&family=Geo:ital@0;1&family=JetBrains+Mono:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Libre+Barcode+39+Text&family=Major+Mono+Display&family=Megrim&family=Michroma&family=Quantico:ital,wght@0,400;0,700;1,400;1,700&family=Raleway+Dots&family=Russo+One&family=Zen+Kurenaido&display=swap"
+    rel="stylesheet">
+
+  <!-- Mobile Port -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
+  <title>MERCH</title>
+</head>
+
+<body>
+  <div id="main-container">
+
+    <section id="header">
+      <!-- <h3>AG<br>RA</h3> -->
+      <div class="logo">
+        <a href="/">
+          <p>AG<br>RA</p>
+        </a>
+
+      </div>
+      <div class="menu">
+        <a class="home" href="/">HOME</a>
+        <a href="/about">ABOUT</a>
+        <a class="current" href="/merch">MERCH</a>
+        <a href="/contact">CONTACT</a>
+        <a href="/faq">FAQ</a>
+
+      </div>
+    </section>
+
+    <div id="404-page">
+      <!-- <div class="contact-card">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div> -->
+
+      <div class="sub-page-spacer">
+        <div class="four-o-four-content">
+          <h1>404</h1>
+          <p>You shouldn't be here...🤨</p>
+        </div>
+
+      </div>
+
+      <div class="footer">
+        <div class="credit">
+          <p>AGRA by <a href="https://github.com/zhaungsont">Michael Chuang</a><br />©Copyright 2021</p>
+        </div>
+        <div class="attributes">Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br>
+          House vector created by macrovector - <a href='https://www.freepik.com/vectors/house'>www.freepik.com</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</body>
+
 </html>
