--- a/src/about.html
+++ b/src/about.html
@@ -58,8 +58,9 @@
         <div class="credit">
           <p>AGRA by <a href="https://github.com/zhaungsont">Michael Chuang</a><br />©Copyright 2021</p>
         </div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-
+        <div class="attributes">Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br>
+          House vector created by macrovector - <a href='https://www.freepik.com/vectors/house'>www.freepik.com</a>
+        </div>
       </div>
     </div>
 
