--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
         <p>AGRA™ is the 4th Generation Nano-based Sampling Architecture that Halves Build Time, and Quadruples Confident Yields Based on 2.5 Trillion ML Datasets.
           We have revolutionized nano-based sampling by dramatically accelerating interation process, 20 years ahead of the competition.</p>
         <!-- Trigger/Open The Modal -->
-        <button id="expBtn">READ MORE</button>
+        <!-- <button id="expBtn">READ MORE</button> -->
 
         <!-- The Modal -->
         <div id="myModal" class="modal">
@@ -196,8 +196,9 @@
     <div class="credit">
       <p>AGRA by <a href="https://github.com/zhaungsont">Michael Chuang</a><br />©Copyright 2021</p>
     </div>
-    <div>Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-    House vector created by macrovector - <a href='https://www.freepik.com/vectors/house'>www.freepik.com</a>
+    <div class="attributes">Icons made by <a href="https://www.flaticon.com/authors/twentyfour" title="twentyfour">twentyfour</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a><br>
+      House vector created by macrovector - <a href='https://www.freepik.com/vectors/house'>www.freepik.com</a>
+    </div>
   </div>
 
 
